molecules-and-light: Flipped the visible spectrum
molecules-and-light: Made the default size of the spectrum window fixed
molecules-and-light: Fixed the location of the arrow pointing to the visible spectrum
# 3.01.14 (48478) Feb 1, 2011
2/1/11 Deploying to dev for review
Updated credits
molecules-and-light: Fix: Made carbon monoxide (CO) have three bonds instead of two.
molecules-and-light: Finished initial cut of translatable spectrum dialog, including the needed strings.
molecules-and-light: Added new version of SpectrumDialog with the infrastructure in place to create a Piccolo-based version of the spectrum node (so that it can be translated).
# 3.01.13 (48236) Jan 25, 2011
1/25/11 Publishing to dev with mods that were requested for interviews
molecules-and-light: Made the spectrum diagram wider (so the word "Ultraviolet" will fit) and shorter.
molecules-and-light: Modified the energy arrow to be solid, smaller, and have the caption beneath it.
# 3.01.12 (48153) Jan 21, 2011
1/21/11 Deploying to dev for review of changes to M&L simulation
Replaced the energy arrows with a single arrow that looks like the one on the sketch of the spectrum node.
Slowed the rotation rate of the molecules so that microwaves don't appear to impart more energy than IR or other photons.
Replaced EM spectrum drawing with new, home-grown version.  This is intended for obtaining feedback, and will be replaced by translatable version once agreed upon.
Added first attempt at a dialog for showing the EM spectrum and a button on the M&L canvas for bringing it up. 
Modified photons and the control panel background in order to make the photons more visible.
Fixed an issue where the edges of the UV photon were being cut off.
# 3.01.11 (47962) Jan 14, 2011
1/14/11 Deploying to dev with slower photon emssion rate for interview testing.
Slowed down the max photon emission rate to about half of what it had been.
Removed spectrum from M&L control panel, did other layout changes.